fixed styling for meeting members table so it doesn't overlap the end meeting button anymore

--- a/src/nRF_mobile/www/css/index.css
+++ b/src/nRF_mobile/www/css/index.css
@@ -234,6 +234,16 @@ footer {
 .devicelist .item.active i.present-icon {
     color: #3dd928;
 }
+.meeting-member-list {
+    z-index:0;
+}
+.meeting-member-list .item {
+    height: 42px;
+    padding-top: 5px;
+}
+.meeting-member-list .item .battery-icon {
+    display:none;
+}
 
 .active .battery-icon.green {
     color: #3dd928;
